workspace = { members = ["easify-macros"] }
[package]
name = "easify"
version = "0.1.0"
edition = "2021"
authors = ["Bakhriddinov Jamoliddin"]
description = "Development tools. Includes various helper functions and proc-macros to simplify your code and boost your development"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easify-macros = { version = "0.1.0" }
