[package]
name = "easify-macros"
version = "0.1.1"
edition = "2021"
authors = ["Bakhriddinov Jamoliddin"]
description = "A set of macros to simplify the process of writing Rust code"
license = "MIT"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.48", features = ["extra-traits", "full"] }
proc-macro2 = "1.0.76"
quote = "1.0.35"
